experimenting with api

--- a/registration/templates/registration/base.html
+++ b/registration/templates/registration/base.html
@@ -14,7 +14,7 @@
     <link rel="icon" href="{% static 'img/core-img/favicon.ico' %}">
 
     <!-- Core Stylesheet -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
     <!-- Preloader -->
