--- a/accounts/templates/registration/account.html
+++ b/accounts/templates/registration/account.html
@@ -5,56 +5,103 @@ Account
 {% endblock %}
 
 {% block body %}
- <!-- ##### Hero Area Start ##### -->
- <section class="hero-area">
+<section class="hero-area">
     <div class="hero-slides owl-carousel">
         <!-- Single Hero Slide -->
-        <div class="single-hero-slide bg-img" style="background-image: url({% static 'img/bg-img/bg1.jpg' %});">
+        <div class="single-hero-slide bg-img" style="background-image: url({% static 'img/bg-img/bg2.jpg' %});">
             <div class="container h-100">
                 <div class="row h-100 align-items-center">
                     <div class="col-12 col-md-9 col-lg-7 col-xl-6">
                         <div class="hero-slides-content" data-animation="fadeInUp" data-delay="100ms">
-                            <h2 data-animation="fadeInUp" data-delay="300ms">Search Recipes by ingredients</h2>
-                            <p data-animation="fadeInUp" data-delay="700ms">We will only show you recipes with the ingredients you specified</p>
-                            
+                            <h2 data-animation="fadeInUp" data-delay="300ms">Hello {{ user.username }}</h2>
+                            <p data-animation="fadeInUp" data-delay="700ms">Email: {{ user.email }}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="single-hero-slide bg-img" style="background-image: url({% static 'img/bg-img/bg5.jpg' %});">
+            <div class="container h-100">
+                <div class="row h-100 align-items-center">
+                    <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                        <div class="hero-slides-content" data-animation="fadeInUp" data-delay="100ms">
+                            <h2 data-animation="fadeInUp" data-delay="300ms">Hello {{ user.username }}</h2>
+                            <p data-animation="fadeInUp" data-delay="700ms">Email: {{ user.email }}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="single-hero-slide bg-img" style="background-image: url({% static 'img/bg-img/bg4.jpg' %});">
+            <div class="container h-100">
+                <div class="row h-100 align-items-center">
+                    <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                        <div class="hero-slides-content" data-animation="fadeInUp" data-delay="100ms">
+                            <h2 data-animation="fadeInUp" data-delay="300ms">Hello {{ user.username }}</h2>
+                            <p data-animation="fadeInUp" data-delay="700ms">Email: {{ user.email }}</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <!-- Single Hero Slide -->
-        <div class="single-hero-slide bg-img" style="background-image: url({% static 'img/bg-img/bg6.jpg' %});">
-            <div class="container h-100">
-                <div class="row h-100 align-items-center">
-                    <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-                        <div class="hero-slides-content" data-animation="fadeInUp" data-delay="100ms">
-                            <h2 data-animation="fadeInUp" data-delay="300ms">Create or log in to your account and keep track of your pantry</h2>
-                            <p data-animation="fadeInUp" data-delay="700ms">Never forget how long ago that jar in your fridge has been opened for</p>
-                            
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Single Hero Slide -->
-        <div class="single-hero-slide bg-img" style="background-image: url({% static 'img/bg-img/bg7.jpg' %});">
-            <div class="container h-100">
-                <div class="row h-100 align-items-center">
-                    <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-                        <div class="hero-slides-content" data-animation="fadeInUp" data-delay="100ms">
-                            <h2 data-animation="fadeInUp" data-delay="300ms">Plan meals and create shopping lists</h2>
-                            <p data-animation="fadeInUp" data-delay="700ms">Your personal sous chef</p>
-                            
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 </section>
-<!-- ##### Hero Area End ##### -->
+
+<!-- ##### Accordians ##### -->
+<div class="container h-100 my-4">
+    <div class="row h-100 align-items-center">
+        <div class="col-12">
+            <div class="accordions mb-80" id="accordion" role="tablist" aria-multiselectable="true">
+
+                <!-- Single Accordian Area -->
+                <div class="panel single-accordion">
+                    <h6><a role="button" class="collapsed aria-expanded="true" aria-controls="collapseOne" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                        Update Username
+                            <span class="accor-open"><i class="fa fa-plus" aria-hidden="true"></i></span>
+                            <span class="accor-close"><i class="fa fa-minus" aria-hidden="true"></i></span>
+                            </a></h6>
+                    <div id="collapseOne" class="accordion-content collapse">
+                        <form action="#"></form>
+                    </div>
+                </div>
+
+                <!-- Single Accordian Area -->
+                <div class="panel single-accordion">
+                    <h6>
+                        <a role="button" class="collapsed" aria-expanded="true" aria-controls="collapseTwo" data-parent="#accordion" data-toggle="collapse" href="#collapseTwo">
+                            Update Email Address
+                                <span class="accor-open"><i class="fa fa-plus" aria-hidden="true"></i></span>
+                                <span class="accor-close"><i class="fa fa-minus" aria-hidden="true"></i></span>
+                                </a>
+                    </h6>
+                    <div id="collapseTwo" class="accordion-content collapse">
+                        <form action="#"></form>
+                    </div>
+                </div>
+
+                <!-- Single Accordian Area -->
+                <div class="panel single-accordion">
+                    <h6>
+                        <a role="button" aria-expanded="true" aria-controls="collapseThree" class="collapsed" data-parent="#accordion" data-toggle="collapse" href="#collapseThree">
+                            Update Password
+                                <span class="accor-open"><i class="fa fa-plus" aria-hidden="true"></i></span>
+                                <span class="accor-close"><i class="fa fa-minus" aria-hidden="true"></i></span>
+                            </a>
+                    </h6>
+                    <div id="collapseThree" class="accordion-content collapse">
+                        <p class="lead">
+                            <a href="{% url 'accounts:password_change' %}">Click here to change your password</a>
+                        </p>
+                </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
 
 
 {% endblock %}
