--- a/accounts/templates/registration/base.html
+++ b/accounts/templates/registration/base.html
@@ -50,8 +50,8 @@
                             <ul>
                                 <li><a href="{% url 'accounts:index' %}">Home</a></li>
                                 <li><a href="{% url 'accounts:login' %}">Login</a></li>
-                                <li><a href="#">Sign Up</a></li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="{% url 'accounts:register' %}">Sign Up</a></li>
+                                <li><a href="{% url 'accounts:contact' %}">Contact</a></li>
                             </ul>
 
                         </div>
@@ -66,7 +66,7 @@
 
     {% for message in messages %}
     <div class="alert {{ message.tags }} alert-dismissible" role="alert"
-    style="position: fixed; z-index: 9999999; margin-top: 100px; margin-left: 25%; width: 50%;">
+    style="position: fixed; z-index: 9999999; margin-top: 50px; margin-left: 25%; width: 50%;">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
         </button>
