--- a/recipes/templates/recipes/base.html
+++ b/recipes/templates/recipes/base.html
@@ -93,7 +93,7 @@
                                 <li><a href="#">Search Recipes</a></li>
                                 <li><a href="#">MyMealPlanner</a></li>
                                 <li><a href="#">MyShoppingList</a></li>
-                                <li><a href="#">Contact Us</a></li>
+                                <li><a href="{% url 'accounts:contact' %}">Contact</a></li>
                                 <li><a href="{% url 'accounts:account' %}"><i class="fas fa-user"></i> {{ user.username }}</a>
                                     <ul class="dropdown">
                                         <li><a href="{% url 'accounts:account' %}">Update details</a></li>
@@ -120,7 +120,7 @@
 
     {% for message in messages %}
     <div class="alert {{ message.tags }} alert-dismissible" role="alert"
-    style="position: fixed; z-index: 99999999; margin-top: 100px; margin-left: 25%; width: 50%;">
+    style="position: fixed; z-index: 99999999; margin-top: 50px; margin-left: 25%; width: 50%;">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
         </button>
