--- a/accounts/templates/registration/index.html
+++ b/accounts/templates/registration/index.html
@@ -12,7 +12,7 @@ Home
         <div class="single-hero-slide bg-img" style="background-image: url({% static 'img/bg-img/bg1.jpg' %});">
             <div class="container h-100">
                 <div class="row h-100 align-items-center">
-                    <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                    <div class="col-12 col-md-9 col-lg-7 col-xl-6 p-5">
                         <div class="hero-slides-content" data-animation="fadeInUp" data-delay="100ms">
                             <h2 data-animation="fadeInUp" data-delay="300ms">Search Recipes by ingredients</h2>
                             <p data-animation="fadeInUp" data-delay="700ms">We will only show you recipes with the ingredients you specified</p>
@@ -27,7 +27,7 @@ Home
         <div class="single-hero-slide bg-img" style="background-image: url({% static 'img/bg-img/bg6.jpg' %});">
             <div class="container h-100">
                 <div class="row h-100 align-items-center">
-                    <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                    <div class="col-12 col-md-9 col-lg-7 col-xl-6 p-5">
                         <div class="hero-slides-content" data-animation="fadeInUp" data-delay="100ms">
                             <h2 data-animation="fadeInUp" data-delay="300ms">Create or log in to your account and keep track of your pantry</h2>
                             <p data-animation="fadeInUp" data-delay="700ms">Never forget how long ago that jar in your fridge has been opened for</p>
@@ -42,7 +42,7 @@ Home
         <div class="single-hero-slide bg-img" style="background-image: url({% static 'img/bg-img/bg7.jpg' %});">
             <div class="container h-100">
                 <div class="row h-100 align-items-center">
-                    <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                    <div class="col-12 col-md-9 col-lg-7 col-xl-6 p-5">
                         <div class="hero-slides-content" data-animation="fadeInUp" data-delay="100ms">
                             <h2 data-animation="fadeInUp" data-delay="300ms">Plan meals and create shopping lists</h2>
                             <p data-animation="fadeInUp" data-delay="700ms">Your personal sous chef</p>
