--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -70,14 +70,16 @@ Register
     </div>
   </div>
   </div>
-  <div class="fieldWrapper">
-  <div class="form-check form-check-inline"> 
+  <div class="form-check">
+    <div class="fieldWrapper">
       {{ form.accept_polices.errors }}
-      {{ form.accept_polices }}
-      <label for="{{ form.accept_polices.id_for_label }}" class="form-check-label m-4">
+      <label for="{{ form.accept_polices.id_for_label }}">
         <small>
           I have read and agree to the privacy, cookies and terms and conditions policy of this site. (links to policies are in the footer)
-        </small></label></div>
+        </small>
+      </label>
+      {{ form.accept_polices }}
+    </div>
   </div>
   <button class="btn btn-block delicious-btn btn-2 text-center" type="submit">Sign Up</button>
 </form>
