--- a/accounts/templates/registration/account.html
+++ b/accounts/templates/registration/account.html
@@ -12,7 +12,7 @@ Account
         <div class="single-hero-slide bg-img" style="background-image: url({% static 'img/bg-img/bg2.jpg' %});">
             <div class="container h-100">
                 <div class="row h-100 align-items-center">
-                    <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                    <div class="col-12 col-md-9 col-lg-7 col-xl-6 p-5">
                         <div class="hero-slides-content" data-animation="fadeInUp" data-delay="100ms">
                             <h2 data-animation="fadeInUp" data-delay="300ms">Hello {{ user.username }}</h2>
                             <p data-animation="fadeInUp" data-delay="700ms">Email: {{ user.email }}</p>
@@ -24,7 +24,7 @@ Account
         <div class="single-hero-slide bg-img" style="background-image: url({% static 'img/bg-img/bg5.jpg' %});">
             <div class="container h-100">
                 <div class="row h-100 align-items-center">
-                    <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                    <div class="col-12 col-md-9 col-lg-7 col-xl-6 p-5">
                         <div class="hero-slides-content" data-animation="fadeInUp" data-delay="100ms">
                             <h2 data-animation="fadeInUp" data-delay="300ms">Hello {{ user.username }}</h2>
                             <p data-animation="fadeInUp" data-delay="700ms">Email: {{ user.email }}</p>
@@ -36,7 +36,7 @@ Account
         <div class="single-hero-slide bg-img" style="background-image: url({% static 'img/bg-img/bg4.jpg' %});">
             <div class="container h-100">
                 <div class="row h-100 align-items-center">
-                    <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                    <div class="col-12 col-md-9 col-lg-7 col-xl-6 p-5">
                         <div class="hero-slides-content" data-animation="fadeInUp" data-delay="100ms">
                             <h2 data-animation="fadeInUp" data-delay="300ms">Hello {{ user.username }}</h2>
                             <p data-animation="fadeInUp" data-delay="700ms">Email: {{ user.email }}</p>
