--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -70,15 +70,13 @@ Register
     </div>
   </div>
   </div>
-  <div class="form-check">
+  <div class="form-check m-3">
     <div class="fieldWrapper">
       {{ form.accept_polices.errors }}
-      <label for="{{ form.accept_polices.id_for_label }}">
-        <small>
+      {{ form.accept_polices|attr:"class:form-check-input" }}
+      <label for="{{ form.accept_polices.id_for_label }}" class="form-check-label">
           I have read and agree to the privacy, cookies and terms and conditions policy of this site. (links to policies are in the footer)
-        </small>
       </label>
-      {{ form.accept_polices }}
     </div>
   </div>
   <button class="btn btn-block delicious-btn btn-2 text-center" type="submit">Sign Up</button>
