--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -33,11 +33,29 @@
     margin: 0;
     padding: 0;
 }
+html {
+    overflow-x: hidden;
+}
 
 body {
     font-family: $fonts;
     font-size: 14px;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    min-height: 100vh;
+    overflow-x: hidden;
 }
+header, .main-footer {
+    flex-grow: 0 !important;
+}
+
+main {
+    flex-grow: 2 !important;
+    min-height: 100vh;
+}
+
+
 
 h1,
 h2,
@@ -1193,13 +1211,30 @@ textarea:focus {
     position: relative;
     z-index: 20;
     form {
-        input {
+        input, select, option {
             width: 100%;
             height: 60px;
             background-color: $bg-gray;
+            font-family: 'Open Sans', sans-serif !important;
+            font-size: 14px;
+            padding: 0 10px;
+            border: none !important;
+            outline: none !important;
+            box-shadow: none !important;
+        }
+        input:focus, select:focus, span:focus, option:focus {
+            border: none !important;
+            outline: none !important;
+            box-shadow: none !important;
+            background-color: $bg-gray !important;
+        }
+        span {
+            background-color: $bg-gray;
             font-size: 14px;
             padding: 0 20px;
-            border: none;
+            border: none !important;
+            outline: none !important;
+            box-shadow: none !important;
         }
     }
     .col-12 {
@@ -1347,7 +1382,7 @@ textarea:focus {
 
 .footer-area {
     position: relative;
-    z-index: 1;
+    z-index: 2;
     width: 100%;
     height: 140px;
     background-color: $white-color;
@@ -1398,7 +1433,7 @@ textarea:focus {
 
 .follow-us-instagram {
     position: relative;
-    z-index: 1;
+    z-index: 2;
     border-top: 1px solid #dcdcdc;
     h5 {
         font-size: 18px;
@@ -1809,3 +1844,159 @@ display: none;
 color: #777;
 }
 }
+
+#virtualPantry {
+    position: relative;
+    min-height: 100vh;
+    background-color: $bg-gray;
+    #fridge {
+        min-height: 100vh;
+        border: 5px solid $border-color !important;
+        border-radius: 5%;
+        .row {
+            border: 5px solid $border-color !important;
+            min-height: 25vh;
+            border-bottom: 0 !important;
+            border-left: 0 !important;
+            border-right: 0 !important;
+            &#other {
+                border-top: 0 !important;
+            }
+           
+        }
+        @media #{$breakpoint-xs} {
+            margin-bottom: 10px;
+        }
+        @media #{$breakpoint-md} {
+            margin-bottom: 10px;
+        }
+    }
+    #top1, #top2, #top3 {
+        min-height: 40vh;
+        border: 5px solid $border-color;
+    }
+    #bottom1, #bottom2, #bottom3 {
+        min-height: 20vh;
+        border: 5px solid $border-color;
+    }
+    #middle1, #middle2, #middle3 {
+        min-height: 40vh;
+    }
+    #middle1 {
+        @media #{$breakpoint-lg} {
+            margin-left: 1px;
+            }
+            @media #{$breakpoint-xl} {
+                margin-left: 1px;
+            }
+    }
+    #top1, #bottom1 {
+        @media #{$breakpoint-lg} {
+            margin-left: 1px;
+            border-right: 0 !important; 
+        }
+        @media #{$breakpoint-xl} {
+            margin-left: 1px;
+            border-right: 0 !important; 
+        }
+        @media #{$breakpoint-xs} {
+            border-right: 5px solid $border-color !important;
+        }
+        @media #{$breakpoint-md} {
+            border-right: 5px solid $border-color !important;
+        }
+    }
+    #top2, #bottom2 {
+        border-right: 0  !important;
+        @media #{$breakpoint-xs} {
+            margin-top: 10px;
+            border-right: 5px solid $border-color !important;
+        }
+        @media #{$breakpoint-md} {
+            margin-top: 10px;
+            border-right: 5px solid $border-color !important;
+        }
+    }
+    #top3, #bottom3 {
+        @media #{$breakpoint-xs} {
+            margin-top: 10px;
+        }
+        @media #{$breakpoint-md} {
+            margin-top: 10px;
+        }
+    }
+    .col-lg {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: flex-end;
+        flex: content;
+    }
+}
+
+.draggable { 
+    width: fit-content; 
+    height: fit-content; 
+    float:  left;
+    padding: 10px;
+    cursor: pointer;
+    margin: 5px;
+    align-self: flex-end;
+}
+
+.other {
+    background-color: #03c383;
+    color: $dark-color;
+}
+.meat {
+    background-color: lightsalmon;
+    color: $dark-color;
+}
+.produce {
+    background-color: #017351;
+    color: $white-color;
+}
+.frozen {
+    background-color: #26294a;
+    color: $white-color;
+}
+.top1 {
+    background-color: #a12a5e;
+    color: $white-color;
+}
+.top2 {
+    background-color: #ed0345;
+    color: $white-color;
+}
+.top3 {
+    background-color: #fbbf45;
+    color: $dark-color;
+}
+.middle1 {
+    background-color:   #022c7d;
+    color: $white-color;
+}
+.middle2 {
+    background-color:   #ef6a32;
+    color: $dark-color;
+}
+.middle3 {
+    background-color: #710162;
+    color: $white-color;
+}
+.bottom1 {
+    background-color:   #1a1334 ;
+    color: $white-color;
+}
+.bottom2 {
+    background-color:   #aad962;
+    color: $dark-color;
+}
+.bottom3 {
+    background-color: #01545a;
+    color: $white-color;
+}
+
+       
+        
+        
+        
