--- a/recipes/templates/recipes/contact.html
+++ b/recipes/templates/recipes/contact.html
@@ -1,5 +1,6 @@
 {% extends 'recipes/base.html' %}
 {% load static %}
+{% load widget_tweaks %}
 {% block title %}
 Contact Us
 {% endblock %}
@@ -59,11 +60,11 @@ Contact Us
                             {{ cform.message }}
                           </div>
                         </div>
-                        <div class="form-check">
+                        <div class="form-check m-3">
                           <div class="fieldWrapper">
                             {{ cform.cc_myself.errors }}
-                            <label for="{{ form.cc_myself.id_for_label }}">CC yourself?</label>
-                            {{ cform.cc_myself }}
+                            {{ cform.cc_myself|attr:"class:form-check-input" }}
+                            <label for="{{ form.cc_myself.id_for_label }}" class="form-check-label">CC yourself?</label>
                           </div>
                         </div>
                         <button class="btn delicious-btn btn-block btn-2" type="submit">Send Message</button>
